# CPP_TEMPLATE_PROJECT

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_script.sh  input.txt
.github/workflows/: assignment_runner.yaml  install_dependencies.sh  memcheck.sh
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  unit_test_tmp_class.cpp  unit_test_tmp_class.h
